--- a/kgmaker/src/main/resources/application.yml
+++ b/kgmaker/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8085
 spring:
   servlet:
     multipart:
@@ -9,11 +9,11 @@ spring:
     cache : false
     mode: HTML5
   neo4j:
-      url: bolt://localhost:7687
+      url: bolt://39.106.107.5:7687
       username: neo4j
-      password: 123456
+      password: jiangbin
   datasource:
-      url: jdbc:mysql://localhost:3306/kg?useSSL=false&serverTimezone=UTC
+      url: jdbc:mysql://39.106.107.5:3306/kg?useSSL=false&serverTimezone=UTC
       driverClassName: com.mysql.cj.jdbc.Driver
       username: root
       password: 123456
@@ -40,7 +40,7 @@ qiniu:
   prefixName: /nndt
 #--------七牛云配置
 img:  #//如果是Windows情况下，格式是 D:\\blog\\image\\   linx 格式"/home/blog/image/";
-   location : D:\\blog\\image\\
+   location : /home/blog/image/
 file:
   serverurl:  http://localhost:8089
-  location : D:\\kgmanager\\csv\\   #如果是Windows情况下，格式是 D:\\kgmanager\\csv\\   linx 格式"/home/kgmanager/csv/";
+  location : /home/kgmanager/csv/   #如果是Windows情况下，格式是 D:\\kgmanager\\csv\\   linx 格式"/home/kgmanager/csv/";
